<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name" translatable="false">Hamburger</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">Hamburger - Debug</string>
    <string name="app_build_date">Build date: %1$s</string>
    <string name="app_license">This app is licensed under the GNU Affero General Public License v3.0</string>
    <string name="app_task_description" translatable="false">Hamburger - %1$s</string>
    <string name="action_add_filter">Add</string>
    <string name="action_archive">Archive</string>
    <string name="action_archive_put">Archive</string>
    <string name="action_archive_clear">Delete all</string>
    <string name="action_archive_export">Export</string>
    <string name="action_archive_import">Import</string>
    <string name="action_archive_import_ext">Import archive</string>
    <string name="action_background_disable">Disable</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="action_close">Close</string>
    <string name="action_delete_log" translatable="false">Delete log</string>
    <string name="action_filter">Filter</string>
    <string name="action_filters_disabled">Inactive</string>
    <string name="action_filters_enabled">Active</string>
    <string name="action_finish">Leave app</string>
    <string name="action_font_delete">Delete imported font</string>
    <string name="action_font_use">Use font</string>
    <string name="action_get_log" translatable="false">Log</string>
    <string name="action_help">Help</string>
    <string name="action_import_font">Import font</string>
    <string name="action_info">Info</string>
    <string name="action_open_app">Open app</string>
    <string name="action_print">Print</string>
    <string name="action_print_pic">Print picture</string>
    <string name="action_read">Read</string>
    <string name="action_read_stop">Stop reading</string>
    <string name="action_recommendations">Recommendations</string>
    <string name="action_scroll_to_top">Scroll to top</string>
    <string name="action_search">Search</string>
    <string name="action_section_ausland">World</string>
    <string name="action_section_channels">Programmes</string>
    <string name="action_section_homepage">Home</string>
    <string name="action_section_inland">Domestic</string>
    <string name="action_section_iv">Investigative</string>
    <string name="action_section_news">News</string>
    <string name="action_section_news_short">News</string>
    <string name="action_section_regional">Regional</string>
    <string name="action_section_sport">Sports</string>
    <string name="action_section_video">Video</string>
    <string name="action_section_weather">Weather</string>
    <string name="action_section_wirtschaft">Economy</string>
    <string name="action_section_wirtschaft_short">Economy</string>
    <string name="action_section_wissen">Knowledge</string>
    <string name="action_select_regions">Regions</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_more">More…</string>
    <string name="action_share">Share</string>
    <string name="action_share_image">Share picture</string>
    <string name="action_share_news">Share article</string>
    <string name="action_share_video">Share video</string>
    <string name="action_shortcut_create">Create shortcut</string>
    <string name="action_shortcut_create_condensed">Shortcut</string>
    <string name="action_show_updates" translatable="false">Show bg updates</string>
    <string name="action_show_weberrors_no">Do not show again</string>
    <string name="action_teletext">Teletext</string>
    <string name="action_teletext_short">TT</string>
    <string name="action_quality_select">Select video quality</string>
    <string name="action_quit">Quit the app?</string>
    <string name="action_view">View</string>
    <string name="action_view_in_browser">View in browser</string>
    <string name="action_view_picture">View picture</string>
    <string name="action_widget_configure">Select Widget Source</string>
    <string name="hint_archive_button_delete">Click to delete the archived news</string>
    <string name="hint_audio_content_play">Play audio content</string>
    <string name="hint_back_to_main">Back to the news overview</string>
    <string name="hint_filter">The phrase to filter</string>
    <string name="hint_filter_add">Use the + button to add a new filter</string>
    <string name="hint_filter_button_clear">Click to clear the phrase</string>
    <string name="hint_filter_button_delete">Click to delete the filter</string>
    <string name="hint_intro_will_be_played">The introduction will be shown during the next start.</string>
    <string name="hint_intro_will_not_be_played">The introduction will not be shown during the next start.</string>
    <string name="hint_menu_search">This menu item invokes the search function</string>
    <string name="hint_permission_location">Permit access to device location.</string>
    <string name="hint_pic">The illustration for this story</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_reset">Press ◀ to reset.</string>
    <string name="hint_search_reset_gesture">Use the \"back\" gesture to reset.</string>
    <string name="hint_widget_source">Widget source: %1$s</string>
    <string name="intro_1">Select a category in the right-hand drawer.</string>
    <string name="intro_1b">Select a category in the right-hand drawer.\n(Press a little longer near the right edge.)</string>
    <string name="intro_2">Search, apply filters and change other settings here.</string>
    <string name="intro_3">Scroll through the list to see the articles.</string>
    <string name="intro_4">Tap an article to see details.</string>
    <string name="intro_5">Enjoy the app!</string>
    <string name="error_archived_already">Article has been archived already.</string>
    <string name="error_archived_failure">Failed to archive this article!</string>
    <string name="error_archived_retrieval">Could not load archived article!</string>
    <string name="error_archive_export_failed">Export failed!</string>
    <string name="error_archive_import_failed">Import of \"%1$s\" failed!</string>
    <string name="error_audio_focus_denied">This cannot be played right now!</string>
    <string name="error_browser_failed">Cannot open a browser!</string>
    <string name="error_connection_failed">Failed to connect to %1$s!</string>
    <string name="error_connection_interrupted">The network connection has been interrupted!</string>
    <string name="error_download_failed">Download failed:\n%1$s</string>
    <string name="error_download_failed2">Download failed.</string>
    <string name="error_filter_not_added">Filter has not been added.</string>
    <string name="error_http_403">Access to the resource has been denied!</string>
    <string name="error_http_404">The resource has not been found!</string>
    <string name="error_http_410">The resource is no longer available!</string>
    <string name="error_invalid_not_a_number">Invalid. Must be a number.</string>
    <string name="error_link_not_supported">This app does not support %1$s.</string>
    <string name="error_nfc_conn_lost">The connection has been lost!</string>
    <string name="error_nfc_io">An I/O error occurred!</string>
    <string name="error_nfc_not_ndef">The tag is not properly NDEF-formatted!</string>
    <string name="error_nfc_not_writeable">The tag is not writeable!</string>
    <string name="error_nfc_other">Failed to write the NFC tag!</string>
    <string name="error_nfc_too_long">The tag cannot store the data as it is too long!</string>
    <string name="error_no_app">No installed app can handle this!</string>
    <string name="error_no_further_details">There are no further details for this.</string>
    <string name="error_no_network">No network.</string>
    <string name="error_no_network_ext">This device should be connected to the web to be useful.</string>
    <string name="error_news_not_found">Article not found.</string>
    <string name="error_parsing">Error while parsing the data!</string>
    <string name="error_permission_denied">Permission denied!</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="pref_default_proxy_type" translatable="false">DIRECT</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_storage">Storage</string>
    <string name="pref_header_data">Data</string>
    <string name="pref_header_polling">Polling</string>
    <string name="pref_header_other">Other</string>
    <string name="pref_header_video">Video</string>
    <string name="pref_hint_pref_cache_max_size">Max. cache size in MB</string>
    <string name="pref_hint_poll_interval">in minutes</string>
    <string name="pref_hint_poll_interval_night">in minutes</string>
    <string name="pref_hint_proxy_server">Server:Port</string>
    <string name="pref_summary_proxy_server">None</string>
    <string name="pref_summary_proxy_type">Proxy type</string>
    <string name="pref_title_ask_before_finish">Before leaving the app</string>
    <string name="pref_title_ask_before_finish_off">do nothing.</string>
    <string name="pref_title_ask_before_finish_on">ask user for confirmation.</string>
    <string name="pref_title_background">Background</string>
    <string name="pref_title_filters_apply_cats">Apply to categories</string>
    <string name="pref_title_nfc_use">Use NFC</string>
    <string name="pref_title_open_links_internally">ARD links</string>
    <string name="pref_title_open_links_internally_off">will be opened in the browser</string>
    <string name="pref_title_open_links_internally_on">will be opened internally</string>
    <string name="pref_title_poll">Poll</string>
    <string name="pref_title_poll_on">Active.</string>
    <string name="pref_title_poll_off">Inactive.</string>
    <string name="pref_title_poll_breaking_only">Show \"breaking\" news only</string>
    <string name="pref_title_poll_over_mobile">Over mobile networks</string>
    <string name="pref_title_poll_stats">Data usage</string>
    <string name="pref_title_play_intro">Show introduction</string>
    <string name="pref_title_pref_mem_cache_max_size">Max. memory cache size</string>
    <string name="pref_title_pref_load_over_mobile">Loading via mobile network</string>
    <string name="pref_title_pref_load_over_mobile_on">Loading via mobile network is on</string>
    <string name="pref_title_pref_load_over_mobile_off">Loading via mobile network is off</string>
    <string name="pref_title_pref_load_videos_over_mobile">Videos via mobile network</string>
    <string name="pref_title_pref_load_videos_over_mobile_on">Play videos via mobile network on</string>
    <string name="pref_title_pref_load_videos_over_mobile_off">Play videos via mobile network off</string>
    <string name="pref_title_proxy_server">Proxy Server</string>
    <string name="pref_title_proxy_type">Proxy Type</string>
    <string name="pref_title_quotationmarks_fix">Wrong quotation marks</string>
    <string name="pref_title_quotationmarks_fix_on">will be fixed („”)</string>
    <string name="pref_title_quotationmarks_fix_off">will be left as they are (\" \")</string>
    <string name="pref_title_show_share_target">Show share target</string>
    <string name="pref_title_time_mode">Time mode</string>
    <string name="pref_title_time_mode_on">Relative</string>
    <string name="pref_title_time_mode_off">Absolute</string>
    <string name="pref_title_use_back">The back button</string>
    <string name="pref_title_warn_mute">If audio is muted,</string>
    <string name="pref_title_warn_mute_on">show a warning</string>
    <string name="pref_title_warn_mute_off">ignore it</string>
</resources>