<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_load_over_mobile"
        android:icon="@drawable/ic_network_cell_ededed_24dp"
        android:title="@string/pref_title_pref_load_over_mobile"
        android:summaryOn="@string/pref_title_pref_load_over_mobile_on"
        android:summaryOff="@string/pref_title_pref_load_over_mobile_off"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_load_videos_over_mobile"
        android:dependency="pref_load_over_mobile"
        android:icon="@drawable/ic_network_cell_ededed_24dp"
        android:title="@string/pref_title_pref_load_videos_over_mobile"
        android:summaryOn="@string/pref_title_pref_load_videos_over_mobile_on"
        android:summaryOff="@string/pref_title_pref_load_videos_over_mobile_off"/>

    <de.freehamburger.util.DisablingValueListPreference
        android:defaultValue="@string/pref_default_proxy_type"
        android:entries="@array/entries_list_proxytypes"
        android:entryValues="@array/entryvalues_list_proxytypes"
        android:key="pref_proxy_type"
        android:summary="@string/pref_summary_proxy_type"
        android:title="@string/pref_title_proxy_type"
        android:icon="@drawable/ic_http_ededed_24dp"
        android:dialogIcon="@drawable/ic_http_ededed_24dp"
        android:negativeButtonText="@null"/>

    <de.freehamburger.util.SummarizingEditTextPreference
        android:key="pref_proxy_server"
        android:summary="@string/pref_summary_proxy_server"
        android:title="@string/pref_title_proxy_server"
        android:hint="@string/pref_hint_proxy_server"
        android:dependency="pref_proxy_type"
        android:inputType="textUri"
        android:icon="@drawable/ic_http_ededed_24dp"
        android:dialogIcon="@drawable/ic_http_ededed_24dp"
        />

</PreferenceScreen>
