<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.freehamburger.prefs.ButtonPreference
        android:icon="@drawable/ic_outline_arrow_back_ios_content_24"
        android:title="@string/pref_title_use_back"
        android:key="pref_use_back"
        app:entries="@array/entries_list_back_button"
        app:colors="@array/colors_list_back_button"
        />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_ask_before_finish_default"
        android:key="pref_ask_before_finish"
        android:title="@string/pref_title_ask_before_finish"
        android:icon="@drawable/ic_clear_content_24dp"
        android:summaryOff="@string/pref_title_ask_before_finish_off"
        android:summaryOn="@string/pref_title_ask_before_finish_on"
        />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_open_links_internally_default"
        android:key="pref_open_links_internally"
        android:icon="@drawable/ic_share_content_24dp"
        android:summaryOff="@string/pref_title_open_links_internally_off"
        android:summaryOn="@string/pref_title_open_links_internally_on"
        android:title="@string/pref_title_open_links_internally"
        />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_warn_mute_default"
        android:key="pref_warn_mute"
        android:icon="@drawable/ic_hearing_content_24dp"
        android:summaryOff="@string/pref_title_warn_mute_off"
        android:summaryOn="@string/pref_title_warn_mute_on"
        android:title="@string/pref_title_warn_mute"
        />

    <EditTextPreference
        android:defaultValue="@integer/pref_mem_cache_max_size_default"
        android:dialogIcon="@drawable/ic_memory_content_24dp"
        android:hint="@string/pref_hint_pref_cache_max_size"
        android:icon="@drawable/ic_memory_content_24dp"
        android:inputType="number"
        android:key="pref_mem_cache_max_size"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pref_mem_cache_max_size"/>

</PreferenceScreen>
