<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_select_regions"
        android:alphabeticShortcut="r"
        android:visible="true"
        android:title="@string/action_select_regions"/>
    <item
        android:id="@+id/action_filter"
        android:alphabeticShortcut="f"
        android:visible="true"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_teletext"
        android:alphabeticShortcut="t"
        android:visible="true"
        android:title="@string/action_teletext"/>
    <item
        android:id="@+id/action_settings"
        android:alphabeticShortcut="e"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_ededed_24dp"
        />
    <item
        android:id="@+id/action_get_log"
        android:alphabeticShortcut="l"
        android:title="@string/action_get_log"
        />
    <item
        android:id="@+id/action_delete_log"
        android:title="@string/action_delete_log"
        />
    <item
        android:id="@+id/action_show_updates"
        android:alphabeticShortcut="u"
        android:title="@string/action_show_updates"
        />
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        />
</menu>