<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="@bool/pref_play_intro_default"
        app:key="pref_play_intro"
        app:summaryOff="@string/hint_intro_will_not_be_played"
        app:summaryOn="@string/hint_intro_will_be_played"
        app:title="@string/pref_title_play_intro" />

    <SwitchPreferenceCompat
        app:defaultValue="@bool/pref_show_share_target_default"
        app:icon="@drawable/ic_share_content_24dp"
        app:key="pref_show_share_target"
        app:singleLineTitle="false"
        app:summaryOff="@string/label_no"
        app:summaryOn="@string/label_yes"
        app:title="@string/pref_title_show_share_target" />

    <Preference
        app:icon="@drawable/ic_baseline_unarchive_content_24"
        app:key="pref_import_archive"
        app:title="@string/action_archive_import_ext">
        <intent
            android:action="@string/appaction_archive_import"
            android:targetClass="de.freehamburger.Archive"
            android:targetPackage="de.freehamburger"
            />
    </Preference>

    <SwitchPreferenceCompat
        app:defaultValue="@bool/pref_nfc_use_default"
        app:icon="@drawable/ic_baseline_nfc_content_24"
        app:key="pref_nfc_use"
        app:summaryOff="@string/label_no"
        app:summaryOn="@string/label_yes"
        app:title="@string/pref_title_nfc_use" />

</PreferenceScreen>
