<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.freehamburger.util.ButtonPreference
        android:icon="@drawable/ic_wb_sunny_ededed_24dp"
        android:title="@string/pref_title_background"
        android:key="pref_background"
        app:entries="@array/entries_list_background"
        app:colors="@array/colors_list_background"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_time_mode"
        android:title="@string/pref_title_time_mode"
        android:icon="@drawable/ic_schedule_ededed_24dp"
        android:summaryOn="@string/pref_title_time_mode_on"
        android:summaryOff="@string/pref_title_time_mode_off"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_correct_quotation_marks"
        android:title="@string/pref_title_quotationmarks_fix"
        android:summaryOn="@string/pref_title_quotationmarks_fix_on"
        android:summaryOff="@string/pref_title_quotationmarks_fix_off"
    />

    <Preference
        android:key="pref_import_font"
        android:title="@string/action_import_font"
        android:icon="@drawable/ic_text_format_ededed_24dp">
        <intent android:action="de.freehamburger.action_font_import" android:targetClass="de.freehamburger.MainActivity" android:targetPackage="de.freehamburger"/>
    </Preference>

    <Preference
        android:key="pref_delete_font"
        android:title="@string/action_font_delete"
        android:icon="@drawable/ic_delete_forever_ededed_24dp"
        android:enabled="false">
        <intent android:action="de.freehamburger.action_font_delete" android:targetClass="de.freehamburger.MainActivity" android:targetPackage="de.freehamburger"/>
    </Preference>
</PreferenceScreen>
