<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_section_homepage"
        android:alphabeticShortcut="h"
        android:visible="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/action_section_homepage"/>
    <item
        android:id="@+id/action_section_news"
        android:alphabeticShortcut="n"
        android:visible="true"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/action_section_news"/>
    <item
        android:id="@+id/action_section_inland"
        android:alphabeticShortcut="i"
        android:icon="@drawable/ic_germany"
        android:title="@string/action_section_inland"
        android:visible="true"/>
    <item
        android:id="@+id/action_section_ausland"
        android:alphabeticShortcut="a"
        android:visible="true"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/action_section_ausland"/>
    <item
        android:id="@+id/action_section_wirtschaft"
        android:alphabeticShortcut="w"
        android:visible="true"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/action_section_wirtschaft"/>
    <item
        android:id="@+id/action_section_sport"
        android:alphabeticShortcut="s"
        android:visible="true"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/action_section_sport"/>
    <item
        android:id="@+id/action_section_regional"
        android:alphabeticShortcut="r"
        android:visible="true"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/action_section_regional"/>
    <item
        android:id="@+id/action_section_video"
        android:alphabeticShortcut="v"
        android:visible="true"
        android:icon="@drawable/ic_videocam_black_24dp"
        android:title="@string/action_section_video"/>
    <item
        android:id="@+id/action_section_channels"
        android:alphabeticShortcut="p"
        android:visible="true"
        android:icon="@drawable/ic_tv_black_24dp"
        android:title="@string/action_section_channels"/>
</menu>