<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <de.freehamburger.prefs.NiceSwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_notifications_ededed_24dp"
        android:key="pref_poll"
        android:summaryOff="@string/pref_title_poll_off"
        android:summaryOn="@string/pref_title_poll_on"
        android:title="@string/pref_title_poll"
        app:singleLineTitle="false"
        />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:dependency="pref_poll"
        android:icon="@drawable/ic_whatshot_ededed_24dp"
        android:key="pref_poll_breaking_only"
        android:title="@string/pref_title_poll_breaking_only"/>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="pref_poll"
        android:icon="@drawable/ic_network_cell_ededed_24dp"
        android:key="pref_poll_over_mobile"
        android:title="@string/pref_title_poll_over_mobile"/>

    <de.freehamburger.prefs.SummarizingEditTextPreference
        android:defaultValue="15"
        android:dependency="pref_poll"
        android:dialogIcon="@drawable/ic_schedule_ededed_24dp"
        android:hint="@string/pref_hint_poll_interval"
        android:icon="@drawable/ic_schedule_ededed_24dp"
        android:inputType="text|number"
        android:key="pref_poll_interval"
        android:title="@string/pref_hint_poll_interval"
        />

    <de.freehamburger.prefs.SummarizingEditTextPreference
        android:defaultValue="15"
        android:dependency="pref_poll"
        android:dialogIcon="@drawable/ic_schedule_dedede_24dp"
        android:hint="@string/pref_hint_poll_interval_night"
        android:icon="@drawable/ic_schedule_dedede_24dp"
        android:inputType="text|number"
        android:key="pref_poll_interval_night"
        android:title="@string/pref_hint_poll_interval_night"
        />

    <Preference
        android:key="pref_poll_stats"
        android:title="@string/pref_title_poll_stats"
        />

</PreferenceScreen>
