<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="de.freehamburger.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_ededed_24dp"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="de.freehamburger.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_format_paint_ededed_24dp"
        android:title="@string/pref_header_appearance"/>

    <header
        android:fragment="de.freehamburger.SettingsActivity$StoragePreferenceFragment"
        android:icon="@drawable/ic_storage_ededed_24dp"
        android:title="@string/pref_header_storage"/>

    <header
        android:fragment="de.freehamburger.SettingsActivity$DataPreferenceFragment"
        android:icon="@drawable/ic_http_ededed_24dp"
        android:title="@string/pref_header_data"/>

    <header
        android:fragment="de.freehamburger.SettingsActivity$PollingPreferenceFragment"
        android:icon="@drawable/ic_notifications_ededed_24dp"
        android:title="@string/pref_header_polling"/>

    <header
        android:fragment="de.freehamburger.SettingsActivity$OtherPreferenceFragment"
        android:icon="@drawable/ic_more_horiz_ededed_24dp"
        android:title="@string/pref_header_other"/>

</preference-headers>
