<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_content_24dp"
        android:orderInCategory="10"
        android:title="@string/action_share"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_read"
        android:alphabeticShortcut="l"
        android:enabled="false"
        android:icon="@drawable/ic_hearing_content_24dp"
        android:orderInCategory="20"
        android:title="@string/action_read"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_print"
        android:orderInCategory="30"
        android:title="@string/action_print"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_archive"
        android:orderInCategory="40"
        android:title="@string/action_archive_put"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_recommendations"
        android:icon="@drawable/ic_baseline_recommend_onprimary_24"
        android:orderInCategory="50"
        android:title="@string/action_recommendations"
        app:showAsAction="ifRoom"
        />
</menu>