<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share_news"
        android:orderInCategory="10"
        android:icon="@drawable/ic_share_ededed_24dp"
        android:title="@string/action_share_news"
        />

    <item
        android:id="@+id/action_share_image"
        android:orderInCategory="20"
        android:icon="@drawable/ic_share_ededed_24dp"
        android:title="@string/action_share_image"
        />

    <item
        android:id="@+id/action_share_video"
        android:orderInCategory="30"
        android:icon="@drawable/ic_share_ededed_24dp"
        android:title="@string/action_share_video"
        />

    <item
        android:id="@+id/action_view_picture"
        android:orderInCategory="40"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/action_view_picture"
        />
</menu>