<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_filter"
        android:alphabeticShortcut="a"
        android:icon="@drawable/ic_add_toolbartext_24dp"
        android:title="@string/action_add_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_enable_filters"
        android:alphabeticShortcut="e"
        android:icon="@null"
        android:title="@string/action_filters_enabled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cats_filters"
        android:checkable="true"
        android:icon="@null"
        android:title="@string/pref_title_filters_apply_cats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_filters"
        android:icon="@null"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>